# sm64tools

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  Makefile.as  README.md  TODO  blast.c  config.c  config.h  elf.h  elfdump.c  f3d.c  f3d2obj.c  known_addresses.h  libblast.h  libmio0.c  libmio0.h  libsfx.c  libsfx.h  libsm64.c  libsm64.h  main.c  mipsdisasm.c  mipsdisasm.h  n64.ld  n64graphics.c  n64graphics.h  n64split.c  n64split.makefile.h  sm64.config  sm64_tools.c  sm64_tools.h  sm64compress.c  sm64extend.c  sm64geo.c  sm64shrink.c  sm64walk.c  split.bat  (+5 more)
configs/: bc.code.config  bc.config  blast_corps.e.code.config  blast_corps.e.code.yaml  blast_corps.e.config  blast_corps.e.yaml  blast_corps.u.1.0.code.config  blast_corps.u.1.0.code.yaml  blast_corps.u.1.0.config  blast_corps.u.1.0.yaml  blast_corps.u.1.1.code.config  blast_corps.u.1.1.code.yaml  blast_corps.u.1.1.config  blast_corps.u.1.1.yaml  blast_dozer.code.config  blast_dozer.code.yaml  blast_dozer.config  blast_dozer.yaml  doraemon.yaml  mk64.u.config  mk64.u.yaml  pifboot.config  pifboot.yaml  sm64.e.config  sm64.e.yaml  sm64.j.config  sm64.j.yaml  sm64.shindou.config  sm64.shindou.yaml  sm64.u.config  sm64.u.yaml
examples/: README.md
examples/behavior/: sm64.rotating_sign.patch
examples/coin_colors/: coin_colors.ips
examples/hello_c/: hello_c.patch
examples/hello_world/: sm64.hello_world.patch
examples/hud_toggle/: sm64.hudtoggle.patch
examples/skip_screens/: skip_lakitu.patch  skip_mario.patch  skip_menu.patch  skip_peach.patch  skip_title.patch
n64split/: n64split.c  n64split.collision.mtl.h  n64split.h  n64split.makefile.h  n64split.sm64.behavior.c  n64split.sm64.behaviour.c  n64split.sm64.collision.c  n64split.sm64.geo.c  n64split.sound.c
release/: n64split.README.txt  sm64extend.README.txt  split.bat
tests/example1/: Makefile  example1.asm
tools/: Makefile  dma2config.py  hudtable.c  jalfind.c  match_signatures.c  mk64karts.c  montage.c  n64ci.c  sm64collision.c  sm64text.c  sm64walk.c
